# Copyright Jeron Aldaron Lau 2019 - 2020.
# Distributed under either the Apache License, Version 2.0
#    (See accompanying file LICENSE_APACHE_2_0.txt or copy at
#          https://apache.org/licenses/LICENSE-2.0),
# or the Boost Software License, Version 1.0.
#    (See accompanying file LICENSE_BOOST_1_0.txt or copy at
#          https://www.boost.org/LICENSE_1_0.txt)
# at your option. This file may not be copied, modified, or distributed except
# according to those terms.

[package]
name = "wavy"
version = "0.8.0"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
license = "Apache-2.0 OR BSL-1.0"

description = """
Asynchronous cross-platform real-time audio recording & playback.
"""
repository = "https://github.com/libcala/wavy"
documentation = "https://docs.rs/wavy"
homepage = "https://github.com/libcala/wavy/blob/master/CHANGELOG.md"
include = ["Cargo.toml", "README.md", "src/*"]
categories = [
    "game-engines", "hardware-support", "multimedia", "multimedia::audio", "os"
]
keywords = ["audio", "realtime", "cross-platform", "record", "play"]
readme = "README.md"
edition = "2018"

# For all platforms
[dependencies.fon]
version = "0.4"

# For Linux and Android
[target.'cfg(all(not(target_arch = "wasm32"), any(target_os = "linux", target_os = "android")))'.dependencies]
smelling_salts = "0.2"
dl_api = "0.4"

# For Web Assembly
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "AudioContext",
    "AudioContextOptions",
    "AudioNode",
    "AudioDestinationNode",
    "ScriptProcessorNode",
    "AudioProcessingEvent",
    "AudioBuffer",
    "MediaStreamConstraints",
    "Window",
    "Navigator",
    "MediaDevices",
    "MediaStream",
    "MediaStreamAudioSourceNode",
    "MediaStreamAudioSourceOptions",
]
[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2"

# Examples
[dev-dependencies]
pasts = "0.7"
twang = "0.6"

[patch.crates-io]
pasts = { path = "../pasts" }
