# Wavy
# Copyright © 2019-2021 Jeron Aldaron Lau.
#
# Licensed under any of:
#  - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
#  - MIT License (https://mit-license.org/)
#  - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
# At your choosing (See accompanying files LICENSE_APACHE_2_0.txt,
# LICENSE_MIT.txt and LICENSE_BOOST_1_0.txt).

[package]
name = "wavy"
version = "0.9.1"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
license = "Apache-2.0 OR MIT OR BSL-1.0"

description = """
Asynchronous cross-platform real-time audio recording & playback.
"""
repository = "https://github.com/libcala/wavy"
documentation = "https://docs.rs/wavy"
homepage = "https://github.com/libcala/wavy/blob/main/CHANGELOG.md"
include = ["Cargo.toml", "src/*"]
categories = [
    "game-engines", "hardware-support", "multimedia", "multimedia::audio", "os"
]
keywords = ["audio", "realtime", "cross-platform", "record", "play"]
readme = "README.md"
edition = "2018"

# For all platforms
[dependencies.fon]
version = "0.5"

# For Linux and Android
[target.'cfg(all(not(target_arch = "wasm32"), any(target_os = "linux", target_os = "android")))'.dependencies]
smelling_salts = "0.4"
dl_api = "0.4"

# For Web Assembly
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "AudioContext",
    "AudioContextOptions",
    "AudioNode",
    "AudioDestinationNode",
    "ScriptProcessorNode",
    "AudioProcessingEvent",
    "AudioBuffer",
    "MediaStreamConstraints",
    "Window",
    "Navigator",
    "MediaDevices",
    "MediaStream",
    "MediaStreamAudioSourceNode",
    "MediaStreamAudioSourceOptions",
]
[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2"

# Examples
[dev-dependencies]
pasts = "0.7"
twang = "0.7"
